--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <html lang="en">
 
 <head>
+
+
+
+    <!-- Basic SEO -->
+<title>Baniyas Typing Center | Abu Dhabi, UAE</title>
+<meta name="description" content="Baniyas Typing Center - Fast, reliable typing and document services in Abu Dhabi, UAE.">
+<meta name="keywords" content="Baniyas Typing, Typing Center, Document Services, Abu Dhabi, UAE">
+<meta name="author" content="TARFEA TYPING">
+
+<!-- Open Graph / Social Media -->
+<meta property="og:title" content="Baniyas Typing Center | Abu Dhabi">
+<meta property="og:description" content="Fast, reliable typing and document services in Abu Dhabi, UAE.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://baniyastyping.com/">
+<meta property="og:image" content="assets/logo.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Baniyas Typing Center | Abu Dhabi">
+<meta name="twitter:description" content="Fast, reliable typing and document services in Abu Dhabi, UAE.">
+<meta name="twitter:image" content="assets/logo.png">
+
+
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
