brand icon changed

--- a/index.html
+++ b/index.html
@@ -411,31 +411,30 @@
             <div class="partners-carousel">
                 <div class="partners-track">
                     <!-- Logos will be duplicated for seamless looping -->
+
                     <div class="partner-logo" data-partner="1">
-                        <img src="assets/partner1.png" alt="Partner 1">
+                        <img src="assets/brand1.png" alt="Partner 1">
                     </div>
                     <div class="partner-logo" data-partner="2">
-                        <img src="assets/brand1.png" alt="Partner 2">
-                    </div>
-                    <div class="partner-logo" data-partner="3">
-                        <img src="assets/brand2.png" alt="Partner 3">
-                    </div>
-                    <div class="partner-logo" data-partner="4">
-                        <img src="assets/brand3.png" alt="Partner 4">
-                    </div>
-                    <!-- Additional logos will be added here -->
-                    <!-- Duplicate set for seamless looping -->
-                    <div class="partner-logo" data-partner="1">
-                        <img src="assets/brand4.png" alt="Partner 1">
-                    </div>
-                    <div class="partner-logo" data-partner="2">
-                        <img src="assets/partner1.png" alt="Partner 2">
+                        <img src="assets/brand2.png" alt="Partner 2">
                     </div>
                     <div class="partner-logo" data-partner="3">
                         <img src="assets/brand3.png" alt="Partner 3">
                     </div>
                     <div class="partner-logo" data-partner="4">
-                        <img src="assets/brand1.png" alt="Partner 4">
+                        <img src="assets/brand4.png" alt="Partner 4">
+                    </div>
+                    <div class="partner-logo" data-partner="5">
+                        <img src="assets/brand5.png" alt="Partner 5">
+                    </div>
+                    <div class="partner-logo" data-partner="6">
+                        <img src="assets/brand6.png" alt="Partner 6">
+                    </div>
+                    <div class="partner-logo" data-partner="7">
+                        <img src="assets/brand7.png" alt="Partner 7">
+                    </div>
+                    <div class="partner-logo" data-partner="8">
+                        <img src="assets/brand8.png" alt="Partner 8">
                     </div>
                 </div>
             </div>
@@ -621,10 +620,12 @@
                 <div class="social-media">
                     <h4>Connect With Us</h4>
                     <div class="social-icons">
-                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/baniyas.typing/" aria-label="Facebook"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/baniyastyping/" aria-label="Instagram"><i
+                                class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://x.com/Baniyastyping" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
