noushadka suggestions added

--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
 
 
     <!-- Basic SEO -->
-<title>Baniyas Typing Center | Abu Dhabi, UAE</title>
-<meta name="description" content="Baniyas Typing Center - Fast, reliable typing and document services in Abu Dhabi, UAE.">
-<meta name="keywords" content="Baniyas Typing, Typing Center, Document Services, Abu Dhabi, UAE">
-<meta name="author" content="TARFEA TYPING">
+    <title>Baniyas Typing Center | Abu Dhabi, UAE</title>
+    <meta name="description"
+        content="Baniyas Typing Center - Fast, reliable typing and document services in Abu Dhabi, UAE.">
+    <meta name="keywords" content="Baniyas Typing, Typing Center, Document Services, Abu Dhabi, UAE">
+    <meta name="author" content="TARFEA TYPING">
 
-<!-- Open Graph / Social Media -->
-<meta property="og:title" content="Baniyas Typing Center | Abu Dhabi">
-<meta property="og:description" content="Fast, reliable typing and document services in Abu Dhabi, UAE.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://baniyastyping.com/">
-<meta property="og:image" content="assets/logo.png">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:title" content="Baniyas Typing Center | Abu Dhabi">
+    <meta property="og:description" content="Fast, reliable typing and document services in Abu Dhabi, UAE.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://baniyastyping.com/">
+    <meta property="og:image" content="assets/logo.png">
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Baniyas Typing Center | Abu Dhabi">
-<meta name="twitter:description" content="Fast, reliable typing and document services in Abu Dhabi, UAE.">
-<meta name="twitter:image" content="assets/logo.png">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Baniyas Typing Center | Abu Dhabi">
+    <meta name="twitter:description" content="Fast, reliable typing and document services in Abu Dhabi, UAE.">
+    <meta name="twitter:image" content="assets/logo.png">
 
 
 
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -233,7 +234,7 @@
                         <img src="assets/main1.png" alt="BANIYAS TYPING – Branch Location" class="branch-image">
                     </div>
                     <h3>BANIYAS TYPING</h3>
-                    <p class="branch-address">Baniyas West4, Near Unites School, Abu Dhabi, UAE</p>
+                    <p class="branch-address">Baniyas West4, Near Unites School, <br>Abu Dhabi, UAE</p>
                     <div class="branch-contact">
                         <a href="tel:+971503005371" class="contact-icon" aria-label="Call branch">
                             <i class="fas fa-phone"></i>
@@ -256,7 +257,7 @@
                         <img src="assets/branch1.png" alt="BANIYAS TYPING – Branch Location" class="branch-image">
                     </div>
                     <h3>BANIYAS TYPING – Branch</h3>
-                    <p class="branch-address">Baniyas, Inside Zenith Supermarket, Abu Dhabi, UAE</p>
+                    <p class="branch-address">Baniyas, Inside Zenith Supermarket, <br>Abu Dhabi, UAE</p>
                     <div class="branch-contact">
                         <a href="tel:+971503005371" class="contact-icon" aria-label="Call branch">
                             <i class="fas fa-phone"></i>
@@ -280,7 +281,7 @@
                         <img src="assets/tarheel1.png" alt="TARHEEL TYPING Location" class="branch-image">
                     </div>
                     <h3>TARHEEL TYPING</h3>
-                    <p class="branch-address">Baniyas East, Near Lulu Hypermarket, Abu Dhabi, UAE</p>
+                    <p class="branch-address">Baniyas East, Near Lulu Hypermarket, <br>Abu Dhabi, UAE</p>
                     <div class="branch-contact">
                         <a href="tel:+971556165424" class="contact-icon" aria-label="Call branch">
                             <i class="fas fa-phone"></i>
@@ -304,7 +305,7 @@
                         <img src="assets/tarfea1.jpeg" alt="TARFEA TYPING Location" class="branch-image">
                     </div>
                     <h3>TARFEA TYPING</h3>
-                    <p class="branch-address">Baniyas East – YasMart, Near Tadbeer, Abu Dhabi, UAE</p>
+                    <p class="branch-address">Baniyas East – YasMart, Near Tadbeer, <br>Abu Dhabi, UAE</p>
                     <div class="branch-contact">
                         <a href="tel:+971524191586" class="contact-icon" aria-label="Call branch">
                             <i class="fas fa-phone"></i>
@@ -328,7 +329,7 @@
                         <img src="assets/travels.png" alt="TARFEA TRAVELS Location" class="branch-image">
                     </div>
                     <h3>TARFEA TRAVELS</h3>
-                    <p class="branch-address">Baniyas West4, Near Unites School, Abu Dhabi, UAE</p>
+                    <p class="branch-address">Baniyas West4, Near Unites School, <br>Abu Dhabi, UAE</p>
                     <div class="branch-contact">
                         <a href="tel:+971502114185" class="contact-icon" aria-label="Call branch">
                             <i class="fas fa-phone"></i>
@@ -337,7 +338,7 @@
                             aria-label="Message branch on WhatsApp">
                             <i class="fab fa-whatsapp"></i>
                         </a>
-                        <a href="https://maps.app.goo.gl/iuzpgSLKcm1rz6JH8" target="_blank" class="contact-icon"
+                        <a href="https://maps.app.goo.gl/xpV3Tm1Kd9yGyJi2A" target="_blank" class="contact-icon"
                             aria-label="Find branch on map">
                             <i class="fas fa-map-marker-alt"></i>
                         </a>
@@ -363,18 +364,19 @@
                         <li><i class="fas fa-user-tie service-icon"></i> Freelance Licences</li>
                         <li><i class="fas fa-cogs service-icon"></i> PRO Services</li>
                         <li><i class="fas fa-globe service-icon"></i> Online Licences</li>
-                        <li><i class="fas fa-passport service-icon"></i> Tasheel</li>
+                        <li><i class="fas fa-regular fa-handshake service-icon"></i> Tawtheeq (Tenancy )</li>
                     </ul>
                 </div>
 
                 <div class="service-category">
                     <h3>Government & Legal Services</h3>
                     <ul class="services-list">
-                        <li><i class="fas fa-id-card service-icon"></i> Emirates ID</li>
+                        <li><i class="fas fa fa-users service-icon"></i> Daman New and Renewal</li>
                         <li><i class="fas fa-shield-alt service-icon"></i> Civil Defence</li>
-                        <li><i class="fas fa-car service-icon"></i> Driving Licence</li>
+                        <li><i class="fas fa-solid fa-hand-holding-heart service-icon"></i> Flexi Insurance</li>
                         <li><i class="fas fa-certificate service-icon"></i> Certificate Attestation</li>
-                        <li><i class="fas fa-balance-scale service-icon"></i> Judicial Services</li>
+                        <li><i class="fas fa-solid fa-stamp service-icon"></i> Mofa Attestation</li>
+                        <li><i class="fas fa-certificate service-icon"></i> Personal and Company Insurance</li>
                     </ul>
                 </div>
 
@@ -384,7 +386,7 @@
                         <li><i class="fas fa-keyboard service-icon"></i> Typing Works</li>
                         <li><i class="fas fa-envelope-open-text service-icon"></i> Letter Typing</li>
                         <li><i class="fas fa-file-alt service-icon"></i> CV Creation</li>
-                        <li><i class="fas fa-language service-icon"></i> Translation</li>
+                        <li><i class="fas fa-language service-icon"></i> Legal Translation</li>
                         <li><i class="fas fa-ticket-alt service-icon"></i> Smart Pass</li>
                         <li><i class="fas fa-stamp service-icon"></i> Stamps & Seals</li>
                         <li><i class="fas fa-copy service-icon"></i> Photocopying</li>
@@ -392,14 +394,65 @@
                 </div>
 
                 <div class="service-category">
-                    <h3>Immigration & Travel Services</h3>
+                    <h3>Immigration And Labor Services</h3>
                     <ul class="services-list">
-                        <li><i class="fas fa-passport service-icon"></i> Immigration</li>
-                        <li><i class="fas fa-shield-virus service-icon"></i> Daman Insurance</li>
-                        <li><i class="fas fa-money-bill-wave service-icon"></i> Fine Payments</li>
-                        <li><i class="fas fa-car-side service-icon"></i> Vehicle Registration</li>
+                        <li><i class="fas fa-passport service-icon"></i> Domestic Visa Services</li>
+                        <li><i class="fas fa-solid fa-user-check service-icon"></i> Family Visa Services</li>
+                        <li><i class="fas fa-money-bill-wave service-icon"></i> Company Visa Services</li>
+                        <li><i class="fas fa-solid fa-users service-icon"></i> Tasheel Services</li>
+                        <li><i class="fas fa-car-side service-icon"></i> Fine Payments</li>
+
                     </ul>
                 </div>
+
+                <div class="service-category">
+                    <h3>Judicial Services</h3>
+                    <ul class="services-list">
+                        <li><i class="fas fa-solid fa-gavel service-icon"></i> Memorandum Of Association</li>
+                        <li><i class="fas fa-shield-virus service-icon"></i> Power Of Attorney</li>
+                        <li><i class="fas fa-regular fa-eye-slash service-icon"></i> P O A Cancellation</li>
+                        <li><i class="fas fa-solid fa-less-than service-icon"></i> Traffic Fine Reduction</li>
+                    </ul>
+                </div>
+
+                <div class="service-category">
+                    <h3>Accounts And Vat Services</h3>
+                    <ul class="services-list">
+                        <li><i class="fas fa-regular fa-building service-icon"></i> Corporate Tax Registration</li>
+                        <li><i class="fas fa-solid fa-calculator service-icon"></i> Vat Registration & Submission
+                        </li>
+                        <li><i class="fas fa-solid fa-file service-icon"></i> Vat De Registration</li>
+                    </ul>
+                </div>
+
+                <div class="service-category">
+                    <h3>Traffic Services</h3>
+                    <ul class="services-list">
+                        <li><i class="fas fa-solid fa-car service-icon"></i> New And Renew Vehicle
+                            Registration</li>
+                        <li><i class="fas fa-solid fa-handshake service-icon"></i> Transfer Vehicle Registration</li>
+                        <li><i class="fas fa-solid fa-ban service-icon"></i> Cancel Vehicle Registration
+                        </li>
+                        <li><i class="fas fa-solid fa-hand-point-right service-icon"></i> Transfer Black Points</li>
+                        <li><i class="fas fa-solid fa-file-invoice-dollar service-icon"></i> Traffic Fine Payments</li>
+                        <li><i class="fas fa-regular fa-folder-open service-icon"></i> Driving File Open</li>
+                        <li><i class="fas fa-solid fa-id-badge service-icon"></i> New And Renewal Driving License</li>
+                        <li><i class="fas fa-solid fa-address-card service-icon"></i> Darb And Salik Services</li>
+                    </ul>
+                </div>
+
+
+                <div class="service-category">
+                    <h3>Travel Services</h3>
+                    <ul class="services-list">
+                        <li><i class="fas fa-passport service-icon"></i> Visit Visa</li>
+                        <li><i class="fas fa-solid fa-compass service-icon"></i> Tour Package</li>
+                        <li><i class="fas fa-solid fa-plane-departure service-icon"></i> Air Ticket</li>
+                        <li><i class="fas fa-kaaba service-icon"></i> Umrah Package</li>
+                        <li><i class="fas fa-solid fa-hotel service-icon"></i> Hotel Booking</li>
+                    </ul>
+                </div>
+
             </div>
         </div>
     </section>
