--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <meta name="twitter:image" content="assets/logo.png">
 
 
+    <link rel="icon" href="assets/favicon.ico" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.ico">
 
 
     <meta charset="UTF-8">
