--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
     <!-- Basic SEO -->
-    <title>Baniyas Typing Center | Abu Dhabi, UAE</title>
+    <title>Baniyas Typing Center | Baniyas, Abu Dhabi, UAE</title>
     <meta name="description"
         content="Baniyas Typing Center - Fast, reliable typing and document services in Abu Dhabi, UAE.">
     <meta name="keywords" content="Baniyas Typing, Typing Center, Document Services, Abu Dhabi, UAE">
